Revert "height fix on mobile"
This reverts commit dd59f0a1f473ff8d05d6bfffd58885672c689adf.

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -9,7 +9,7 @@
 // Full screen mixins
 
 @mixin widget-container-fs {
-  height: 90vh;
+  height: 100vh;
   margin: 0;
   max-width: none;
   width: 100%;
